Describe the changes made in linear_regression.ipynb

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "21e72ca7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -22,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "b93b6b19",
    "metadata": {},
    "outputs": [],
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "ae2c2cbc",
    "metadata": {},
    "outputs": [],
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "49fbae62",
    "metadata": {},
    "outputs": [],
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "6c7594b6",
    "metadata": {},
    "outputs": [
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "749c3398",
    "metadata": {},
    "outputs": [
