--- a/multipleLinearRegression/multiple_linear_regression.ipynb
+++ b/multipleLinearRegression/multiple_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "1a0aae67",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "b44bb046",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "9987ec7f",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4           4  2017      8           2.50                5.4         1256"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "ab9c4e6b",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "4           2.50                5.4         1256"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "6b0e874b",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,17 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "db9e8d62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1efb2d31460>"
+       "<seaborn.axisgrid.PairGrid at 0x1efb42fe1e0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "367f8111",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "index_price             0.935793          -0.922338     1.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "01a9ae98",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "Text(0, 0.5, 'unemployment rate')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -376,41 +376,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "e4ec4ecd",
    "metadata": {},
    "outputs": [],
    "source": [
     "##independent nd dependent variable \n",
-    "X = df[['interest_rate','unemployment_rate']]\n",
-    "Y = df[['index_price']]"
+    "X = df[['interest_rate','unemployment_rate']].values\n",
+    "Y = df[['index_price']].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "76035044",
+   "execution_count": 54,
+   "id": "2a835b84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[2.  , 5.9 ],\n",
+       "        [2.5 , 5.3 ],\n",
+       "        [1.75, 6.2 ],\n",
+       "        [2.5 , 5.5 ],\n",
+       "        [1.75, 6.1 ],\n",
+       "        [2.5 , 5.3 ],\n",
+       "        [1.75, 5.9 ],\n",
+       "        [2.25, 5.5 ],\n",
+       "        [2.75, 5.3 ],\n",
+       "        [1.75, 6.2 ],\n",
+       "        [2.  , 6.  ],\n",
+       "        [1.75, 6.1 ],\n",
+       "        [1.75, 5.9 ],\n",
+       "        [2.25, 5.5 ],\n",
+       "        [2.5 , 5.6 ],\n",
+       "        [1.75, 6.1 ],\n",
+       "        [1.75, 5.8 ],\n",
+       "        [2.25, 5.6 ],\n",
+       "        [2.5 , 5.3 ],\n",
+       "        [1.75, 6.1 ]]),\n",
+       " array([[1.75, 6.1 ],\n",
+       "        [2.5 , 5.4 ],\n",
+       "        [1.75, 6.2 ],\n",
+       "        [2.  , 5.7 ]]),\n",
+       " array([[1075],\n",
+       "        [1357],\n",
+       "        [ 704],\n",
+       "        [1234],\n",
+       "        [ 719],\n",
+       "        [1293],\n",
+       "        [ 876],\n",
+       "        [1159],\n",
+       "        [1464],\n",
+       "        [ 971],\n",
+       "        [1047],\n",
+       "        [ 866],\n",
+       "        [ 965],\n",
+       "        [1195],\n",
+       "        [1254],\n",
+       "        [ 949],\n",
+       "        [ 943],\n",
+       "        [1167],\n",
+       "        [1394],\n",
+       "        [ 958]], dtype=int64),\n",
+       " array([[ 884],\n",
+       "        [1256],\n",
+       "        [ 822],\n",
+       "        [1130]], dtype=int64))"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#train test split \n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
-    "    X, Y, test_size=0.25, random_state=42, shuffle=True\n",
-    ")"
+    "def split_data(X,Y,test_size=0.2,random_state=0):\n",
+    "    X = np.array(X)\n",
+    "    Y = np.array(Y)\n",
+    "    \n",
+    "    rng = np.random.default_rng(seed=random_state) # local generator instance\n",
+    "    indices = rng.permutation(len(X)) #shuffle indices using the local generator \n",
+    "    test_count = max(1, int(len(X) * test_size))\n",
+    "\n",
+    "    #seperate into train & test split\n",
+    "    train_indices = indices[test_count:]\n",
+    "    test_indices = indices[:test_count]\n",
+    "\n",
+    "    X_train,X_test = X[train_indices],X[test_indices]\n",
+    "    Y_train,Y_test = Y[train_indices],Y[test_indices]\n",
+    "\n",
+    "    return X_train,X_test,Y_train,Y_test\n",
+    "\n",
+    "split_data(X,Y,test_size=0.2,random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "aed60ad7",
+   "execution_count": 55,
+   "id": "4139f232",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
+    "class MultipleLinearRegression():\n",
+    "    def __init__(self,learning_rate = 0.01,epochs = 1000):\n",
+    "        self.lr = learning_rate\n",
+    "        self.epochs = epochs \n",
+    "\n",
+    "    def fit(self,X,Y):\n",
+    "        X = np.array(X)\n",
+    "        Y = np.array(Y).ravel()\n",
+    "        n_samples,n_features = X.shape\n",
+    "        #initialize weights and bias \n",
+    "        self.weights = np.zeros(n_features)\n",
+    "        self.bias = 0 \n",
+    "        #gradient descent\n",
+    "        for i in range(self.epochs):\n",
+    "            y_pred = np.dot(X,self.weights) + self.bias\n",
+    "\n",
+    "            dw = (1/n_samples)*np.dot(X.T, y_pred - Y)\n",
+    "            db = (1/n_samples)*np.sum(y_pred - Y)\n",
+    "            #update parameters \n",
+    "            self.weights -= self.lr*dw\n",
+    "            self.bias -= self.lr*db\n",
+    "\n",
+    "    def predict(self,X):\n",
+    "        return np.dot(X, self.weights)+self.bias\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3e683f04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StandardScalerScratch:\n",
+    "    def fit(self, X):\n",
+    "        X = np.array(X)\n",
+    "        self.mean = X.mean(axis=0)\n",
+    "        self.std = X.std(axis=0)\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X = np.array(X)\n",
+    "        return (X - self.mean) / self.std\n",
+    "\n",
+    "    def fit_transform(self, X):\n",
+    "        self.fit(X)\n",
+    "        return self.transform(X)\n",
+    "\n",
+    "scaler = StandardScalerScratch()\n",
+    "\n",
     "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.fit_transform(X_test)"
+    "X_test = scaler.transform(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7dc41a36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MultipleLinearRegression(learning_rate=0.01, epochs=1000)\n",
+    "model.fit(X_train, Y_train)\n",
+    "predictions = model.predict(X_test)"
    ]
   }
  ],
